# live-context-graph-demo

./: .env.example  .gitignore  DEMO_LOG_FILTERING.md  GREP_PATTERNS.md  Makefile  OPENSEARCH_SINK_IMPLEMENTATION.md  OPENSEARCH_SUBSCRIBE_IMPLEMENTATION.md  PR_81_RELEASE_NOTES.md  README.md  demo-transaction-logs.sh  docker-compose.yml  test_subscribe.py
agents/: requirements.txt
api/: Dockerfile  requirements.txt
aws/: README.md  debug.sh  deploy.sh  ssh-tunnel.sh  teardown.sh  user-data.sh
connect/: Dockerfile  register-connectors.sh
demo/: README.md  pyproject.toml
demo/src/demo_tui/: __init__.py  __main__.py  app.py  app.tcss  config.py  freshness.tcss  freshness_app.py  timing.py
demo/src/demo_tui/feeds/: agent_stream.py  load_pulse.py  mz_subscribe.py  propagation.py  query_stats_client.py  reaction_time.py  types.py
demo/src/demo_tui/panels/: agent_panel.py  comparison_panel.py  load_panel.py  mz_panel.py  timing_panel.py
demo/src/demo_tui/widgets/: input_pane.py
docs/: AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_GUIDANCE_ORDER_LINE_ITEMS.md  CONTRIBUTING.md  DATA_MODEL.md  DYNAMIC_PRICING.md  GITHUB_ISSUES_ORDER_LINE_ITEMS.md  ONTOLOGY.md  ONTOLOGY_GUIDE.md  OPENSEARCH_SYNC_RUNBOOK.md  OPERATIONS.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PRODUCT_BRIEF_ORDER_LINE_ITEMS.md  SEARCH.md  ZERO_NAMED_QUERIES_MIGRATION.md
embedding-service/: Dockerfile  requirements.txt
embeddings-shim/: Dockerfile  app.py  requirements.txt
load-generator/: Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
load-generator/loadgen/: __init__.py  __main__.py  api_client.py  cli.py  config.py  data_generators.py  demand_orchestrator.py  metrics.py  orchestrator.py  server.py  supply_orchestrator.py
load-generator/loadgen/scenarios/: __init__.py  courier_dispatch.py  customers.py  inventory.py  lifecycle.py  orders.py
load-generator/tests/: __init__.py  conftest.py  test_api_client.py  test_config.py  test_courier_dispatch.py  test_data_generators.py  test_metrics.py  test_scenarios.py  test_server.py
(+229 files in other folders)
