[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "freshmart-demo-tui"
version = "0.1.0"
description = "Terminal CQRS dashboard for the FreshMart agent demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.86.0",
    "psycopg[binary]>=3.2.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "textual-dev>=1.6.0",
]

[project.scripts]
freshmart-demo-tui = "demo_tui.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
