[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "freshmart-loadgen"
version = "1.0.0"
description = "Load generator for FreshMart digital twin demo"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "faker>=24.0.0",
    "click>=8.1.7",
    "rich>=13.7.1",
    "python-dateutil>=2.9.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
freshmart-loadgen = "loadgen.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
